added finalized details UI for Stage 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Project Motion</string>
+    <string name="placeholder_text">Placeholder Text</string>
+    <string name="overview">Overview</string>
 </resources>
