removed unnecessary logs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Project Motion</string>
     <string name="placeholder_text">Placeholder Text</string>
     <string name="overview">Overview</string>
+    <string name="placeholder_date">13th December 1989</string>
 </resources>
