moved JSON parsing logic to different class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="placeholder_text">Placeholder Text</string>
     <string name="overview">Overview</string>
     <string name="placeholder_date">13th December 1989</string>
+    <string name="reviews">Reviews</string>
 </resources>
